# Knut-Counter-K

./: .env.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json
api/: alerts.ts  auth.ts  companion.ts  dashboard.ts  models.ts  package.json  provider-accounts.ts  providers.ts
api/account/: me.ts  settings.ts
api/alerts/: evaluate.ts  index.ts
api/antigravity/: callback.ts
api/companion/: authorize.ts  device-code.ts  sync.ts
api/import/: index.ts
api/pricing/: refresh.ts
api/provider-accounts/: credentials.ts  index.ts
api/providers/: registry.ts  sync.ts
api/recommend/: index.ts
api/usage/: manual.ts
apiUtils/: auth.ts  companion.ts  currency.ts  currencyCodes.ts  models.ts  pricingRefresh.ts  registry.ts  sync.ts
apps/mobile/: app.json  env.d.ts  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  account.tsx  add-provider.tsx  antigravity-callback.tsx  companion.tsx
apps/mobile/components/: BackButton.tsx
apps/mobile/hooks/: useAuthSession.ts  useDashboardData.ts  useProviderRegistry.ts
apps/mobile/lib/: accountApi.ts  alertsStore.ts  companionApi.ts  dashboardStore.ts  (+4 more)
companion/: package.json
companion/src/: index.html  main.ts
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: api.rs  config.rs  lib.rs  main.rs  sync.rs
companion/src-tauri/src/providers/: antigravity.rs  claude.rs  codex.rs  mod.rs
docs/: setup-step-1.md
e2e/: smoke.spec.ts
(+12 files in other folders)
